media queries for small screens

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -239,3 +239,114 @@ body {
 }
 
 }
+
+
+/* Media Queries*/
+
+/* Mobile*/
+@media (max-width:480px){
+    #hero-section {
+        .text-wrapper{
+            padding-top: 150px;
+
+            .hero-text{
+                h1{
+                    font-size: 2rem;
+                }   
+                h2{
+                    font-size: 1rem;
+                }             
+            }
+        }
+
+}
+}
+/* Tablets*/
+
+@media (max-width:768px){
+#hero-section {
+    height: 600px;
+
+    img{
+        width: 100px;
+        height: 35px;
+    }
+    .text-wrapper .hero-text a{
+        font-size: 20px;
+    }
+}
+
+#tv{
+    flex-direction: column;
+    .tv-left{
+        padding-bottom: 30px;
+        
+        h1{
+            font-size: 40px;
+        }
+        h3{
+            font-size: 20px;
+
+        }
+    }
+    .tv-right img{
+        width:400px;
+    }
+}
+
+#download{
+    flex-direction: column; 
+    text-align: center;
+
+    .download-left {
+        img{
+        width: 450px;
+        }
+    }
+
+    .download-right{
+
+        h1{
+            font-size: 40px;
+        }      
+        
+        h3{
+            font-size: 20px;
+        }
+    }
+}
+
+#everywhere-section{
+    flex-direction: column;
+    flex-direction: column-reverse; 
+
+    .everywhere-left{
+
+        h1{
+            font-size: 40px;
+        }      
+        
+        h3{
+            font-size: 20px;
+
+        }
+    }
+
+    .everywhere-right img{
+        width: 450px;
+    }
+}
+
+#footer{
+    
+    h3{
+        padding-left: 20px;
+    }
+
+    .footer-column-container{
+        justify-content: space-around;
+    }
+}
+
+
+}
